# MevWallet

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  bind.sh  devenv.sh  foundry.toml  remappings.txt  test.sh
contracts/: MevWalletV0.sol  MevWalletV0Factory.sol  MevWalletV1.sol  MevWalletV1Factory.sol
contracts/V0/: MevWalletV0.sol
contracts/utils/: Drain.sol  IERC20.sol
script/: DeployDrain.s.sol  DeployFactoryV0.sol  DeployFactoryV1.s.sol  DeployImplV0.sol  DeployImplV1.s.sol  DeployProxyV0.sol  DeployProxyV1.s.sol  DeployProxyV1.sol
script/V0/: DeployFactoryV0.sol  DeployImplV0.sol  DeployProxyV0.sol
src/: deploy.rs  lib.rs  macros.rs
src/bindings/: deploy_drain.rs  deploy_factory_v0.rs  deploy_factory_v1.rs  deploy_impl_v0.rs  deploy_impl_v1.rs  deploy_mev_wallet_v0.rs  deploy_proxy_v0.rs  deploy_proxy_v1.rs  drain.rs  i_mev_weth.rs  ierc20.rs  mev_wallet_v0.rs  mev_wallet_v0_factory.rs  mev_wallet_v1.rs  mev_wallet_v1_factory.rs  mevitize.rs  mod.rs  mwb.rs  std_chains.rs
src/tx/: builder.rs  dutch.rs  ext.rs  mod.rs  types.rs
test/: MWB.sol  MevWalletV0.t.sol  MevWalletV1.t.sol
tests/: integration.rs
