[package]
name = "mev-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.62"
ethers = { git = "https://github.com/gakonst/ethers-rs.git", features = ["eip712"] }
futures-util = "0.3.26"
once_cell = "1.17.0"
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["macros", "rt", "time", "sync"] }

[dev-dependencies]
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros"] }
tokio-test = "0.4.2"
